force-app/main/default/objects/Opportunity/fields/Aprobaci_n_CEO_Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Aprobaci_n_CEO_Business_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Aprobación de propuesta por parte del CEO para enviar al cliente</inlineHelpText>
    <label>Aprobación CEO Business Case</label>
    <type>Checkbox</type>
</CustomField>