force-app/main/default/objects/Opportunity/fields/Aprobaci_n_de_PS__c.field-meta.xml
<CustomField>
    <fullName>Aprobaci_n_de_PS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check del área de Professional Services</inlineHelpText>
    <label>Aprobación de PS</label>
    <type>Checkbox</type>
</CustomField>