force-app/main/default/objects/Opportunity/fields/Aprobaci_n_HD__c.field-meta.xml
<CustomField>
    <fullName>Aprobaci_n_HD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación HD</label>
    <type>Checkbox</type>
</CustomField>