force-app/main/default/objects/Opportunity/fields/BANT__c.field-meta.xml
<CustomField>
    <fullName>BANT__c</fullName>
    <inlineHelpText>Volumetría</inlineHelpText>
    <label>BANT</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>