force-app/main/default/objects/Opportunity/fields/BOM_en__c.field-meta.xml
<CustomField>
    <fullName>BOM_en__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Materiales requeridos en $$</inlineHelpText>
    <label>BOM en $$</label>
    <type>Checkbox</type>
</CustomField>