force-app/main/default/objects/Opportunity/fields/BOM_R_D__c.field-meta.xml
<CustomField>
    <fullName>BOM_R_D__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bill of Material</inlineHelpText>
    <label>BOM (R&amp;D)</label>
    <type>Checkbox</type>
</CustomField>