force-app/main/default/objects/Opportunity/fields/Business_Case_por_el_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_por_el_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Case por el Cliente</label>
    <type>Checkbox</type>
</CustomField>