force-app/main/default/objects/Opportunity/fields/C_digo_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Proyecto__c</fullName>
    <label>Código de Proyecto</label>
    <type>TextArea</type>
</CustomField>