force-app/main/default/objects/Opportunity/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <description>Determina cuál es el canal de creación del lead</description>
    <formula>IF(ISPICKVAL(LeadSource,&quot;Partner&quot;),&quot;Partner&quot;,IF(ISPICKVAL(LeadSource,&quot;Outbound&quot;),&quot;Outbound&quot;,&quot;Inbound&quot;))</formula>
    <inlineHelpText>Determina si el Lead vino de Outbound, Partner o Inbound</inlineHelpText>
    <label>Canal</label>
    <type>Text</type>
</CustomField>