force-app/main/default/objects/Opportunity/fields/Cartas_de_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Cartas_de_Referencia__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cartas de Referencia de clientes similares al caso de negocio</inlineHelpText>
    <label>Cartas de Referencia</label>
    <type>Checkbox</type>
</CustomField>