force-app/main/default/objects/Opportunity/fields/Caso_de_xito_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Caso_de_xito_Referencia__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contamos con un caso de éxito que permita posicionarnos en la oportundiad</inlineHelpText>
    <label>Caso de Éxito / Referencia</label>
    <type>Checkbox</type>
</CustomField>