force-app/main/default/objects/Opportunity/fields/Causa_de_P_rdida__c.field-meta.xml
<CustomField>
    <fullName>Causa_de_P_rdida__c</fullName>
    <label>Causa de Pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Capacidad tecnica de la plataforma</fullName>
            </value>
            <value>
                <fullName>Competencia con mejor producto</fullName>
            </value>
            <value>
                <fullName>Decisión de Fisa de NO Participar</fullName>
            </value>
            <value>
                <fullName>Demora en respuesta de producto</fullName>
            </value>
            <value>
                <fullName>Funcionalidades de producto</fullName>
            </value>
            <value>
                <fullName>Mala capacidad de entendimiento del equipo comercial</fullName>
            </value>
            <value>
                <fullName>No es Prioridad para el Cliente</fullName>
            </value>
            <value>
                <fullName>Oportunidad dejó de responder</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>Precio alto</fullName>
            </value>
            <value>
                <fullName>Precio alto</fullName>
            </value>
            <value>
                <fullName>Proceso cancelado por el cliente</fullName>
            </value>
            <value>
                <fullName>Proceso de Implementación</fullName>
            </value>
            <value>
                <fullName>Prospecto/Cliente no realizó el pago</fullName>
            </value>
            <value>
                <fullName>Proyecto stand-by</fullName>
            </value>
            <value>
                <fullName>SQL no respondió a la solicitud de primera reunión</fullName>
            </value>
            <value>
                <fullName>SQL pequeño no cuenta con presupuesto</fullName>
            </value>
            <value>
                <fullName>Tiempos altos de Implementación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>