force-app/main/default/objects/Opportunity/fields/Certificaciones_Integraciones__c.field-meta.xml
<CustomField>
    <fullName>Certificaciones_Integraciones__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Certificado de integraciones requeridas</inlineHelpText>
    <label>Certificaciones Integraciones</label>
    <type>Checkbox</type>
</CustomField>