force-app/main/default/objects/Opportunity/fields/Chequeo_Volumetr_a__c.field-meta.xml
<CustomField>
    <fullName>Chequeo_Volumetr_a__c</fullName>
    <label>Chequeo Volumetría</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>