force-app/main/default/objects/Opportunity/fields/Closure_Q__c.field-meta.xml
<CustomField>
    <fullName>Closure_Q__c</fullName>
    <description>Trimestre en el que cerrará esta oportunidad</description>
    <inlineHelpText>Trimestre en el que cerrará esta oportunidad</inlineHelpText>
    <label>Closure Q</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>