force-app/main/default/objects/Opportunity/fields/Con_qui_n_competimos_Actualmente__c.field-meta.xml
<CustomField>
    <fullName>Con_qui_n_competimos_Actualmente__c</fullName>
    <description>Competencia actual, en cada proceso de la venta.</description>
    <label>Con quién competimos (Actualmente)</label>
    <type>TextArea</type>
</CustomField>