force-app/main/default/objects/Opportunity/fields/Confindence_Close__c.field-meta.xml
<CustomField>
    <fullName>Confindence_Close__c</fullName>
    <description>Probabilidad de Cierre de acuerdo al criterio del vendedor</description>
    <label>Confidence to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>