force-app/main/default/objects/Opportunity/fields/Contacto_de_la_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Contacto_de_la_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto de la Oportunidad</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>