force-app/main/default/objects/Opportunity/fields/Correo_post_reuni_n__c.field-meta.xml
<CustomField>
    <fullName>Correo_post_reuni_n__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Correo post primera visita con siguientes pasos a realizar</inlineHelpText>
    <label>Correo post visita</label>
    <type>Checkbox</type>
</CustomField>