force-app/main/default/objects/Opportunity/fields/Days_of_External_Work__c.field-meta.xml
<CustomField>
    <fullName>Days_of_External_Work__c</fullName>
    <label>Days of External Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>