force-app/main/default/objects/Opportunity/fields/Days_of_Work_Paid__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Work_Paid__c</fullName>
    <description>Dias hombre contratados</description>
    <label>Days of Work Paid</label>
    <summarizedField>OpportunityLineItem.Dias_Hombre__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>