force-app/main/default/objects/Opportunity/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Tomador de decisión y dar el GO del proyecto</inlineHelpText>
    <label>Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Decision Maker)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>