force-app/main/default/objects/Opportunity/fields/Deliver_License_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliver_License_Date__c</fullName>
    <label>Deliver License Date</label>
    <type>Date</type>
</CustomField>