force-app/main/default/objects/Opportunity/fields/Deliver_Services_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Services_End_Date__c</fullName>
    <label>Deliver Services End Date</label>
    <type>Date</type>
</CustomField>