force-app/main/default/objects/Opportunity/fields/DEMO__c.field-meta.xml
<CustomField>
    <fullName>DEMO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reunión de presentación de DEMO de solución</inlineHelpText>
    <label>DEMO</label>
    <type>Checkbox</type>
</CustomField>