force-app/main/default/objects/Opportunity/fields/Dimensionamiento__c.field-meta.xml
<CustomField>
    <fullName>Dimensionamiento__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dimensionamiento en Valor de los productos</inlineHelpText>
    <label>Dimensionamiento Producto $$</label>
    <type>Checkbox</type>
</CustomField>