force-app/main/default/objects/Opportunity/fields/Dimensionamiento_Productos__c.field-meta.xml
<CustomField>
    <fullName>Dimensionamiento_Productos__c</fullName>
    <inlineHelpText>Reunión de Dimensionamiento de Productos con prospecto</inlineHelpText>
    <label>Dimensionamiento Productos</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>