force-app/main/default/objects/Opportunity/fields/Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>Direct_Costs__c</fullName>
    <label>Direct Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>