force-app/main/default/objects/Opportunity/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Documento Tecnico Funcional de la solución donde se especifica capabilities (eliminación de ambiguedades)</inlineHelpText>
    <label>Documento Técnico Funcional</label>
    <type>Checkbox</type>
</CustomField>