force-app/main/default/objects/Opportunity/fields/Documentos_Compra_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Compra_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Recepción y cumplimiento de documentación de compras del cliente</inlineHelpText>
    <label>Documentos Compra Cliente</label>
    <type>Checkbox</type>
</CustomField>