force-app/main/default/objects/Opportunity/fields/Empresa_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Servicio__c</fullName>
    <label>Empresa Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fisa Group</fullName>
                <default>true</default>
                <label>Fisa Group</label>
            </value>
            <value>
                <fullName>Seriva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>