force-app/main/default/objects/Opportunity/fields/Escalabilidad_del_requerimiento__c.field-meta.xml
<CustomField>
    <fullName>Escalabilidad_del_requerimiento__c</fullName>
    <label>Escalabilidad del requerimiento</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>