force-app/main/default/objects/Opportunity/fields/Etapa_de_Baja__c.field-meta.xml
<CustomField>
    <fullName>Etapa_de_Baja__c</fullName>
    <label>Etapa de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Value Proposition</fullName>
            </value>
            <value>
                <fullName>Quoting Development</fullName>
            </value>
            <value>
                <fullName>Solution Presentation</fullName>
            </value>
            <value>
                <fullName>Negociation</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Book &amp; Earn</fullName>
            </value>
            <value>
                <fullName>Macro</fullName>
            </value>
            <value>
                <fullName>Analisis DEF</fullName>
            </value>
            <value>
                <fullName>Generar Propuesta</fullName>
            </value>
            <value>
                <fullName>Aprobación Propuesta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>