force-app/main/default/objects/Opportunity/fields/Fecha_Env_o_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Env_o_Propuesta__c</fullName>
    <inlineHelpText>Fecha de Envío de Propuesta</inlineHelpText>
    <label>Fecha Envío Propuesta</label>
    <type>Date</type>
</CustomField>