force-app/main/default/objects/Opportunity/fields/Fecha_Siguiente_Paso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Siguiente_Paso__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Fecha de ejecución del siguiente paso de la oportunidad</description>
    <label>Fecha Siguiente Paso</label>
    <type>Date</type>
</CustomField>