force-app/main/default/objects/Opportunity/fields/Infraestructura_Requerida__c.field-meta.xml
<CustomField>
    <fullName>Infraestructura_Requerida__c</fullName>
    <label>Infraestructura Requerida</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>