force-app/main/default/objects/Opportunity/fields/Integraciones_Requeridas__c.field-meta.xml
<CustomField>
    <fullName>Integraciones_Requeridas__c</fullName>
    <inlineHelpText>Intergaciones requeridas 3 partes</inlineHelpText>
    <label>Integraciones Requeridas</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>