force-app/main/default/objects/Opportunity/fields/Key_Business_Results__c.field-meta.xml
<CustomField>
    <fullName>Key_Business_Results__c</fullName>
    <inlineHelpText>Estrategia del cliente - Key Business Results</inlineHelpText>
    <label>Key Business Results</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>