force-app/main/default/objects/Opportunity/fields/Lead_Efectivo__c.field-meta.xml
<CustomField>
    <fullName>Lead_Efectivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Descripción de lead efectivo</description>
    <inlineHelpText>Casilla para Area Comercial
Espicificar que es un lead efectivo para el área comercial</inlineHelpText>
    <label>Lead Efectivo</label>
    <type>Checkbox</type>
</CustomField>