force-app/main/default/objects/Opportunity/fields/Licencia_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>Licencia_Recurrente__c</fullName>
    <label>Licencia Recurrente</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>