force-app/main/default/objects/Opportunity/fields/LicRec__c.field-meta.xml
<CustomField>
    <fullName>LicRec__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LicRec</label>
    <type>Checkbox</type>
</CustomField>