force-app/main/default/objects/Opportunity/fields/Maintenance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Start_Date__c</fullName>
    <label>Maintenance Start Date</label>
    <type>Date</type>
</CustomField>