force-app/main/default/objects/Opportunity/fields/Material_Requerido__c.field-meta.xml
<CustomField>
    <fullName>Material_Requerido__c</fullName>
    <inlineHelpText>Materiales requeridos Funcional/Técnico BOM</inlineHelpText>
    <label>Material Funcional/Técnico</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>