force-app/main/default/objects/Opportunity/fields/Motivo_perdida_diferido__c.field-meta.xml
<CustomField>
    <fullName>Motivo_perdida_diferido__c</fullName>
    <description>Incluir el motivo por el cuál esta oportunidad se declara como perdida/diferida.</description>
    <inlineHelpText>Incluir el motivo por el cuál esta oportunidad se declara como perdida/diferida.</inlineHelpText>
    <label>Motivo pérdida/diferido:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>