force-app/main/default/objects/Opportunity/fields/Opportunity_booking__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_booking__c</fullName>
    <formula>Confindence_Close__c  *  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Booking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>