force-app/main/default/objects/Opportunity/fields/Other_Days_of_work__c.field-meta.xml
<CustomField>
    <fullName>Other_Days_of_work__c</fullName>
    <label>Other Days of work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>