force-app/main/default/objects/Opportunity/fields/Pais_de_la_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_la_Oportunidad__c</fullName>
    <formula>Text(Account.Pa_s__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pais de la Oportunidad</label>
    <type>Text</type>
</CustomField>