force-app/main/default/objects/Opportunity/fields/Porcentaje_de_Licencia_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_Licencia_Recurrente__c</fullName>
    <defaultValue>0.22</defaultValue>
    <description>Porcentaje de Licencia recurrente de la oportunidad</description>
    <label>Porcentaje de Licencia Recurrente</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>