force-app/main/default/objects/Opportunity/fields/Precontratado__c.field-meta.xml
<CustomField>
    <fullName>Precontratado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>La oportunidad se cobrará dentro de un precontratado o es una nueva venta</inlineHelpText>
    <label>Precontratado</label>
    <type>Checkbox</type>
</CustomField>