force-app/main/default/objects/Opportunity/fields/Presupuesto_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_Proyecto__c</fullName>
    <inlineHelpText>Validar presupuesto para el desarrollo de la iniciativa</inlineHelpText>
    <label>Presupuesto Proyecto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>