force-app/main/default/objects/Opportunity/fields/Primera_reuni_n__c.field-meta.xml
<CustomField>
    <fullName>Primera_reuni_n__c</fullName>
    <inlineHelpText>Primera reunión con</inlineHelpText>
    <label>Primera Reunión con</label>
    <type>TextArea</type>
</CustomField>