force-app/main/default/objects/Opportunity/fields/Problema_Institucion__c.field-meta.xml
<CustomField>
    <fullName>Problema_Institucion__c</fullName>
    <description>Detalle conciso del problema u objetivo de la institución por la que quiere adquirir esta Oportunidad</description>
    <inlineHelpText>Detalle del problema u objetivo que tiene la institución para adquirir esta Oportunidad</inlineHelpText>
    <label>Problema Institucion</label>
    <type>TextArea</type>
</CustomField>