force-app/main/default/objects/Opportunity/fields/Proceso_de_Compra_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Compra_Cliente__c</fullName>
    <inlineHelpText>Detallar el proceso de Compra del Cliente</inlineHelpText>
    <label>Proceso de Compra Cliente</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>