force-app/main/default/objects/Opportunity/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FISA System</fullName>
                <default>true</default>
                <label>FISA System</label>
            </value>
            <value>
                <fullName>FISA FISS</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>