force-app/main/default/objects/Opportunity/fields/Producto_Subproducto__c.field-meta.xml
<CustomField>
    <fullName>Producto_Subproducto__c</fullName>
    <label>Producto/Subproducto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FISA-System</fullName>
                <default>true</default>
                <label>FISA-System</label>
            </value>
            <value>
                <fullName>OMNIA</fullName>
            </value>
            <value>
                <fullName>FISA - Credit Card</fullName>
            </value>
            <value>
                <fullName>OMNIA - BRE</fullName>
                <isActive>false</isActive>
                <label>OMNIA - BRE</label>
            </value>
            <value>
                <fullName>OMNIA - Banca Móvil - Mobile 2.0</fullName>
                <isActive>false</isActive>
                <label>OMNIA - Banca Móvil - Mobile 2.0</label>
            </value>
            <value>
                <fullName>OMNIA - Customer Management</fullName>
                <isActive>false</isActive>
                <label>OMNIA - Customer Management</label>
            </value>
            <value>
                <fullName>OMNIA - FT</fullName>
                <isActive>false</isActive>
                <label>OMNIA - FT</label>
            </value>
            <value>
                <fullName>OMNIA - Herramienta (AG)</fullName>
                <isActive>false</isActive>
                <label>OMNIA - Herramienta (AG)</label>
            </value>
            <value>
                <fullName>OMNIA - OLB Empresas</fullName>
                <isActive>false</isActive>
                <label>OMNIA - OLB Empresas</label>
            </value>
            <value>
                <fullName>OMNIA - OLB Personas</fullName>
                <isActive>false</isActive>
                <label>OMNIA - OLB Personas</label>
            </value>
            <value>
                <fullName>OMNIA - Pricing</fullName>
                <isActive>false</isActive>
                <label>OMNIA - Pricing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>