force-app/main/default/objects/Opportunity/fields/Productos__c.field-meta.xml
<CustomField>
    <fullName>Productos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Descripción de los módulos que la oportunidad está interesada en adquirir</inlineHelpText>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>