force-app/main/default/objects/Opportunity/fields/Propuesta_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Propuesta_Comercial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Desarrollo de Propuesta Comercial</inlineHelpText>
    <label>Propuesta Comercial</label>
    <type>Checkbox</type>
</CustomField>