force-app/main/default/objects/Opportunity/fields/Propuesta_de_valor__c.field-meta.xml
<CustomField>
    <fullName>Propuesta_de_valor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propuesta de Valor</label>
    <type>Checkbox</type>
</CustomField>