force-app/main/default/objects/Opportunity/fields/Proyectos_de_Escalado_Validado__c.field-meta.xml
<CustomField>
    <fullName>Proyectos_de_Escalado_Validado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Validación de Escalamiento de Proyectos</inlineHelpText>
    <label>Proyectos de Escalado Validado</label>
    <type>Checkbox</type>
</CustomField>