force-app/main/default/objects/Opportunity/fields/Puntos_de_Dolor__c.field-meta.xml
<CustomField>
    <fullName>Puntos_de_Dolor__c</fullName>
    <label>Puntos de Dolor</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>