force-app/main/default/objects/Opportunity/fields/Relacionado_con__c.field-meta.xml
<CustomField>
    <fullName>Relacionado_con__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relacionado con</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Relacionado</relationshipName>
    <type>Lookup</type>
</CustomField>