force-app/main/default/objects/Opportunity/fields/Requerimiento_Funcional_T_cnico__c.field-meta.xml
<CustomField>
    <fullName>Requerimiento_Funcional_T_cnico__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Materiales requeridos Funcional / Técnico</inlineHelpText>
    <label>Requerimiento Funcional/Técnico</label>
    <type>Checkbox</type>
</CustomField>