force-app/main/default/objects/Opportunity/fields/Reuni_n_de_Dimensionamiento__c.field-meta.xml
<CustomField>
    <fullName>Reuni_n_de_Dimensionamiento__c</fullName>
    <inlineHelpText>Resumen de 2da reunión con prospecto</inlineHelpText>
    <label>Reunión de Dimensionamiento</label>
    <type>TextArea</type>
</CustomField>