force-app/main/default/objects/Opportunity/fields/Revisi_n_Final_Business_Case_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Revisi_n_Final_Business_Case_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Revisión de caso de negocio con el cliente</inlineHelpText>
    <label>Revisión Final Business Case - Cliente</label>
    <type>Checkbox</type>
</CustomField>