force-app/main/default/objects/Opportunity/fields/Revisi_n_Final_de_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>Revisi_n_Final_de_Propuesta__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Revisión interna de Propuesta</inlineHelpText>
    <label>Revisión Final de Propuesta</label>
    <type>Checkbox</type>
</CustomField>