force-app/main/default/objects/Opportunity/fields/RFI_RFP__c.field-meta.xml
<CustomField>
    <fullName>RFI_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Documento formal de licitación y funcionalidades requeridas</inlineHelpText>
    <label>RFI / RFP / RFQ</label>
    <type>Checkbox</type>
</CustomField>