force-app/main/default/objects/Opportunity/fields/Sales_Comissions__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comissions__c</fullName>
    <label>Sales Comissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>