force-app/main/default/objects/Opportunity/fields/Servicios_Profesionales__c.field-meta.xml
<CustomField>
    <fullName>Servicios_Profesionales__c</fullName>
    <label>Servicios Profesionales</label>
    <summarizedField>OpportunityLineItem.Servicios_Profesionales__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>