force-app/main/default/objects/Opportunity/fields/Socios_en_el_mbito__c.field-meta.xml
<CustomField>
    <fullName>Socios_en_el_mbito__c</fullName>
    <inlineHelpText>¿Qué socios o aliados tenemos para brindar la solución requerida por el prospecto?</inlineHelpText>
    <label>Socios en el ámbito</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>