force-app/main/default/objects/Opportunity/fields/Soluci_n__c.field-meta.xml
<CustomField>
    <fullName>Soluci_n__c</fullName>
    <inlineHelpText>Solución Solicitada por el Cliente</inlineHelpText>
    <label>Solución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor de Crédito</fullName>
            </value>
            <value>
                <fullName>Core Bancario</fullName>
            </value>
            <value>
                <fullName>BRE</fullName>
            </value>
            <value>
                <fullName>Banca Móvil/Banca Web</fullName>
            </value>
            <value>
                <fullName>Banca Empresas</fullName>
            </value>
            <value>
                <fullName>Canales Digitales</fullName>
            </value>
            <value>
                <fullName>SWITCH</fullName>
            </value>
            <value>
                <fullName>Core de Tarjeta de Crédito</fullName>
            </value>
            <value>
                <fullName>Tarjeta de Débito</fullName>
            </value>
            <value>
                <fullName>OnBoarding Digital</fullName>
            </value>
            <value>
                <fullName>Pagos Móviles (Rapid Cash)</fullName>
            </value>
            <value>
                <fullName>Tesorería</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>