force-app/main/default/objects/Opportunity/fields/Sponsor_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_del_Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Encargado de llevar el proyecto adelante dentro de la organización</inlineHelpText>
    <label>Sponsor del Proyecto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades (Sponsor del Proyecto)</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>