force-app/main/default/objects/Opportunity/fields/Start_Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Work_Date__c</fullName>
    <label>Start Work Date</label>
    <type>Date</type>
</CustomField>