force-app/main/default/objects/Opportunity/fields/Tama_o__c.field-meta.xml
<CustomField>
    <fullName>Tama_o__c</fullName>
    <label>Tamaño</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grande (+$3.000 MM Activos)</fullName>
            </value>
            <value>
                <fullName>Mediano (Entre $3.000 MM y $300 MM Activos)</fullName>
            </value>
            <value>
                <fullName>Pequeño (-$300 MM Activos)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>