force-app/main/default/objects/Opportunity/fields/Tama_o_Lead__c.field-meta.xml
<CustomField>
    <fullName>Tama_o_Lead__c</fullName>
    <description>Tamaño aproximado Lead</description>
    <label>Tamaño Lead</label>
    <type>TextArea</type>
</CustomField>