force-app/main/default/objects/Opportunity/fields/Test_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Test_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>TEst Delivery Assesment</inlineHelpText>
    <label>Test Delivery Assesment (TDA)</label>
    <type>Checkbox</type>
</CustomField>