force-app/main/default/objects/Opportunity/fields/Tiempo_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_de_Proyecto__c</fullName>
    <inlineHelpText>Tiempo del proyecto a alto nivel</inlineHelpText>
    <label>Tiempo de Proyecto</label>
    <type>TextArea</type>
</CustomField>